--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
             <span class="visually-hidden">Search</span>
           </button>
-          <input type="text" placeholder="Why do you always come back to me" autofocus />
+          <input type="text" placeholder="Why do you always come back to me" tabindex="0" autofocus />
         </div>
         <div id="bookmarks">
           <!-- Bookmarks will get inserted here! -->
         </div>
       </main>
     </div>
-    <a id="yags-link" href="https://prettycoffee.github.io/yet-another-generic-startpage/">Created with YAGS</a>
+    <a id="yags-link" href="https://github.com/SudoLemuel">Created by Lemuel</a>
   </body>
   <script type="text/javascript" src="./scripts.js"></script>
 </html>
