--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </div>
       </main>
     </div>
-    <a id="git-link" href="https://github.com/I-am-Lemuel">Created by Lemuel</a>
+    <a id="git-link" href="https://github.com/I-am-Lemuel"
+      >Created by I-am-Lemuel</a
+    >
   </body>
   <script type="text/javascript" src="./scripts.js"></script>
 </html>
